--- a/kafka-consumer-elasticsearch/pom.xml
+++ b/kafka-consumer-elasticsearch/pom.xml
@@ -29,6 +29,7 @@
             <artifactId>kafka-clients</artifactId>
             <version>2.8.0</version>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -36,6 +37,14 @@
             <version>1.7.31</version>
             <!--            <scope>test</scope>-->
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.7</version>
+        </dependency>
+
     </dependencies>
 
 </project>
