--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>kafka-basics</module>
         <module>kafka-producer-twitter</module>
         <module>kafka-consumer-elasticsearch</module>
+        <module>kafka-connect</module>
+        <module>kafka-streams-filter-tweets</module>
     </modules>
 
 
